# zukmove

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  populate.sh
apps/colporteur/: Cargo.toml
apps/colporteur/src/: main.rs
apps/erasmumu/: Cargo.toml
apps/erasmumu/src/: main.rs
apps/erasmumu/src/adapters/: mod.rs  mongo_offer.rs
apps/erasmumu/src/routes/: offer.rs
apps/erasmumu/src/tests/: in_memory_offer_repo.rs  mod.rs
apps/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: CityScoreBars.tsx  OfferCard.tsx
apps/frontend/src/lib/: api.ts
apps/frontend/src/pages/: OffersExplorer.tsx  PreferencesPage.tsx  StudentDashboard.tsx  StudentLogin.tsx
apps/frontend/src/store/: auth.ts  preferences.ts
apps/laposte/: Cargo.toml
apps/laposte/src/: main.rs
apps/mi8/: Cargo.toml  build.rs
apps/mi8/src/: main.rs  service.rs
apps/mi8/src/adapters/: array_news_repo.rs  in_memory_city_score_repo.rs  mod.rs  redis_city_score_repo.rs  redis_news_repo.rs
apps/polytech/: Cargo.toml  build.rs
apps/polytech/migrations/: 001_init.sql
apps/polytech/src/: main.rs
apps/polytech/src/adapters/: grpc_news_client.rs  http_offer_client.rs  mod.rs  postgres_internship.rs  postgres_notification.rs  postgres_student.rs
apps/polytech/src/routes/: internship.rs  mod.rs  news.rs  notification.rs  offer.rs  student.rs
apps/polytech/src/tests/: in_memory_internship_repo.rs  in_memory_student_repo.rs  mock_intelligence_client.rs  mock_offer_client.rs  mod.rs
libs/zukmove-core/: Cargo.toml
libs/zukmove-core/src/app/: internship_service.rs  mod.rs
libs/zukmove-core/src/domain/: entities.rs  ports.rs
libs/zukmove-core/src/domain/entities/: city_score.rs  gateway.rs  internship.rs  news.rs  notification.rs  offer.rs  student.rs
proto/: mi8.proto
