[package]
name = "colporteur"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "colporteur"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

[build-dependencies]
tonic-prost-build = "0.14"
