[package]
name = "colporteur"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "colporteur"
path = "src/main.rs"

[dependencies]
lapin = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
