[package]
name = "erasmumu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "erasmumu"
path = "src/main.rs"

[dependencies]
zukmove-core = { path = "../../libs/zukmove-core" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
