[package]
name = "laposte"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "laposte"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
lapin = "2"
tracing-subscriber = "0.3"
futures-lite = "2"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
