[package]
name = "mi8"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mi8"
path = "src/main.rs"

[dependencies]
zukmove-core = { path = "../../libs/zukmove-core" }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
redis = { version = "1", features = ["tokio-comp"] }
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

[build-dependencies]
tonic-prost-build = "0.14"
