[package]
name = "polytech"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polytech"
path = "src/main.rs"

[dependencies]
zukmove-core = { path = "../../libs/zukmove-core" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
