[package]
name = "zukmove-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.10.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
utoipa = { version = "5", features = ["uuid", "chrono"] }
